--- a/src/vector/index.html
+++ b/src/vector/index.html
@@ -1,23 +1,17 @@
 <!doctype html>
 <html lang="en" style="height: 100%;">
-
-<head>
+  <head>
     <meta charset="utf-8">
     <title>Yoteqi Chat</title>
     <link rel="apple-touch-icon" sizes="57x57" href="<%= require('../../res/vector-icons/apple-touch-icon-57.png') %>">
     <link rel="apple-touch-icon" sizes="60x60" href="<%= require('../../res/vector-icons/apple-touch-icon-60.png') %>">
     <link rel="apple-touch-icon" sizes="72x72" href="<%= require('../../res/vector-icons/apple-touch-icon-72.png') %>">
     <link rel="apple-touch-icon" sizes="76x76" href="<%= require('../../res/vector-icons/apple-touch-icon-76.png') %>">
-    <link rel="apple-touch-icon" sizes="114x114"
-        href="<%= require('../../res/vector-icons/apple-touch-icon-114.png') %>">
-    <link rel="apple-touch-icon" sizes="120x120"
-        href="<%= require('../../res/vector-icons/apple-touch-icon-120.png') %>">
-    <link rel="apple-touch-icon" sizes="144x144"
-        href="<%= require('../../res/vector-icons/apple-touch-icon-144.png') %>">
-    <link rel="apple-touch-icon" sizes="152x152"
-        href="<%= require('../../res/vector-icons/apple-touch-icon-152.png') %>">
-    <link rel="apple-touch-icon" sizes="180x180"
-        href="<%= require('../../res/vector-icons/apple-touch-icon-180.png') %>">
+    <link rel="apple-touch-icon" sizes="114x114" href="<%= require('../../res/vector-icons/apple-touch-icon-114.png') %>">
+    <link rel="apple-touch-icon" sizes="120x120" href="<%= require('../../res/vector-icons/apple-touch-icon-120.png') %>">
+    <link rel="apple-touch-icon" sizes="144x144" href="<%= require('../../res/vector-icons/apple-touch-icon-144.png') %>">
+    <link rel="apple-touch-icon" sizes="152x152" href="<%= require('../../res/vector-icons/apple-touch-icon-152.png') %>">
+    <link rel="apple-touch-icon" sizes="180x180" href="<%= require('../../res/vector-icons/apple-touch-icon-180.png') %>">
     <link rel="manifest" href="manifest.json">
     <meta name="referrer" content="no-referrer">
     <link rel="shortcut icon" href="<%= require('../../res/vector-icons/favicon.ico') %>">
@@ -43,44 +37,42 @@
         form-action 'self' <%= csp_extra_source %>;
         manifest-src 'self' <%= csp_extra_source %>;
     ">
-    <% for (var i=0; i < htmlWebpackPlugin.files.css.length; i++) { var file=htmlWebpackPlugin.files.css[i]; var
-        match=file.match(/^bundles\/.*?\/theme-(.*)\.css$/); if (match) { var title=match[1].charAt(0).toUpperCase() +
-        match[1].slice(1); %>
-        <link rel="stylesheet" disabled="disabled" data-mx-theme="<%= title %>" title="<%= title %>" href="<%= file %>">
+    <% for (var i=0; i < htmlWebpackPlugin.files.css.length; i++) {
+        var file = htmlWebpackPlugin.files.css[i];
+        var match = file.match(/^bundles\/.*?\/theme-(.*)\.css$/);
+        if (match) {
+            var title = match[1].charAt(0).toUpperCase() + match[1].slice(1);
+        %>
+           <link rel="stylesheet" disabled="disabled" data-mx-theme="<%= title %>" title="<%= title %>" href="<%= file %>">
         <% } else { %>
-            <link rel="stylesheet" href="<%= file %>">
-            <% } } %>
+           <link rel="stylesheet" href="<%= file %>">
+        <% }
+    } %>
 
-                <% for (var i=0; i < htmlWebpackPlugin.tags.headTags.length; i++) { var
-                    tag=htmlWebpackPlugin.tags.headTags[i]; var path=tag.attributes && tag.attributes.href; if
-                    (path.includes("/Inter/")) { %>
-                    <link rel="preload" as="font" href=".<%= path %>" crossorigin="anonymous" />
-                    <% } } %>
+    <% for (var i=0; i < htmlWebpackPlugin.tags.headTags.length; i++) {
+        var tag = htmlWebpackPlugin.tags.headTags[i];
+        var path = tag.attributes && tag.attributes.href;
+        if (path.includes("/Inter/")) { %>
+            <link rel="preload" as="font" href=".<%= path %>" crossorigin="anonymous"/>
+        <% }
+    } %>
 
-</head>
-
-<body style="height: 100%; margin: 0;">
+  </head>
+  <body style="height: 100%; margin: 0;">
     <noscript>Sorry, Yoteqi requires JavaScript to be enabled.</noscript> <!-- TODO: Translate this? -->
     <section id="matrixchat" style="height: 100%;" class="notranslate"></section>
-    <script src="<%= htmlWebpackPlugin.files.js.find(entry => entry.includes(" bundle.js")) %>"></script>
+    <!-- // prettier-ignore -->
+    <script src="<%= htmlWebpackPlugin.files.js.find(entry => entry.includes('bundle.js')) %>"></script>
 
     <!-- Legacy supporting Prefetch images -->
-    <img src="<%= require('matrix-react-sdk/res/img/warning.svg').default %>" aria-hidden alt="" width="24" height="23"
-        style="visibility: hidden; position: absolute; top: 0px; left: 0px;" />
-    <img src="<%= require('matrix-react-sdk/res/img/e2e/warning.svg').default %>" aria-hidden alt="" width="24"
-        height="23" style="visibility: hidden; position: absolute; top: 0px; left: 0px;" />
-    <img src="<%= require('matrix-react-sdk/res/img/feather-customised/warning-triangle.svg').default %>" aria-hidden
-        alt="" width="24" height="23" style="visibility: hidden; position: absolute; top: 0px; left: 0px;" />
-    <img src="<%= require('matrix-react-sdk/res/img/format/bold.svg').default %>" aria-hidden alt="" width="25"
-        height="22" style="visibility: hidden; position: absolute; top: 0px; left: 0px;" />
-    <img src="<%= require('matrix-react-sdk/res/img/format/code.svg').default %>" aria-hidden alt="" width="25"
-        height="22" style="visibility: hidden; position: absolute; top: 0px; left: 0px;" />
-    <img src="<%= require('matrix-react-sdk/res/img/format/italics.svg').default %>" aria-hidden alt="" width="25"
-        height="22" style="visibility: hidden; position: absolute; top: 0px; left: 0px;" />
-    <img src="<%= require('matrix-react-sdk/res/img/format/quote.svg').default %>" aria-hidden alt="" width="25"
-        height="22" style="visibility: hidden; position: absolute; top: 0px; left: 0px;" />
-    <img src="<%= require('matrix-react-sdk/res/img/format/strikethrough.svg').default %>" aria-hidden alt="" width="25"
-        height="22" style="visibility: hidden; position: absolute; top: 0px; left: 0px;" />
+    <img src="<%= require('matrix-react-sdk/res/img/warning.svg').default %>" aria-hidden alt="" width="24" height="23" style="visibility: hidden; position: absolute; top: 0px; left: 0px;"/>
+    <img src="<%= require('matrix-react-sdk/res/img/e2e/warning.svg').default %>" aria-hidden alt="" width="24" height="23" style="visibility: hidden; position: absolute; top: 0px; left: 0px;"/>
+    <img src="<%= require('matrix-react-sdk/res/img/feather-customised/warning-triangle.svg').default %>" aria-hidden alt="" width="24" height="23" style="visibility: hidden; position: absolute; top: 0px; left: 0px;"/>
+    <img src="<%= require('matrix-react-sdk/res/img/format/bold.svg').default %>" aria-hidden alt="" width="25" height="22" style="visibility: hidden; position: absolute; top: 0px; left: 0px;"/>
+    <img src="<%= require('matrix-react-sdk/res/img/format/code.svg').default %>" aria-hidden alt="" width="25" height="22" style="visibility: hidden; position: absolute; top: 0px; left: 0px;"/>
+    <img src="<%= require('matrix-react-sdk/res/img/format/italics.svg').default %>" aria-hidden alt="" width="25" height="22" style="visibility: hidden; position: absolute; top: 0px; left: 0px;"/>
+    <img src="<%= require('matrix-react-sdk/res/img/format/quote.svg').default %>" aria-hidden alt="" width="25" height="22" style="visibility: hidden; position: absolute; top: 0px; left: 0px;"/>
+    <img src="<%= require('matrix-react-sdk/res/img/format/strikethrough.svg').default %>" aria-hidden alt="" width="25" height="22" style="visibility: hidden; position: absolute; top: 0px; left: 0px;"/>
 
     <audio id="messageAudio">
         <source src="media/message.ogg" type="audio/ogg" />
@@ -104,9 +96,6 @@
     </audio>
     <audio id="remoteAudio"></audio>
     <!-- let CSS themes pass constants to the app -->
-    <div id="mx_theme_accentColor"></div>
-    <div id="mx_theme_secondaryAccentColor"></div>
-    <div id="mx_theme_tertiaryAccentColor"></div>
-</body>
-
+    <div id="mx_theme_accentColor"></div><div id="mx_theme_secondaryAccentColor"></div><div id="mx_theme_tertiaryAccentColor"></div>
+  </body>
 </html>
