--- a/res/welcome.html
+++ b/res/welcome.html
@@ -170,7 +170,7 @@ we don't have an account and should hide them. No account == no guest account ei
 </style>
 
 <div class="mx_Parent">
-    <a href="https://yoteqi.com" target="_blank" rel="noopener">
+    <a href="https://chat.yoteqi.com" target="_blank" rel="noopener">
         <img src="welcome/images/logo.svg" alt="" class="mx_Logo" />
     </a>
     <h1 class="mx_Header_title">_t("Welcome to Yoteqi")</h1>
