--- a/src/vector/static/unable-to-load.html
+++ b/src/vector/static/unable-to-load.html
@@ -171,7 +171,7 @@
         </div>
         <div class="mx_HomePage_row mx_Center mx_Spacer">
             <p class="mx_Spacer">
-                <a href="https://yoteqi.com" target="_blank" class="mx_FooterLink"> Go to yoteqi.com </a>
+                <a href="https://chat.yoteqi.com" target="_blank" class="mx_FooterLink"> Go to Yoteqi Chat </a>
             </p>
         </div>
     </div>
